--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@rainbow-me/rainbowkit": "^1.3.1",
+    "autoprefixer": "^10.4.14",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.263.0",
-    "tailwindcss": "^3.3.2",
-    "autoprefixer": "^10.4.14",
+    "next": "13.4.12",
     "postcss": "^8.4.24",
-    "wagmi": "^1.3.10",
-    "viem": "^1.5.2"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.3.2",
+    "viem": "^1.5.2",
+    "wagmi": "^1.3.10"
   },
   "devDependencies": {
     "@types/node": "20.4.1",
