--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.3.1",
+    "@tanstack/react-query": "^4.29.19",
     "autoprefixer": "^10.4.14",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.263.0",
